force-app/main/default/objects/Animal_Age_Range__mdt/Animal_Age_Range__mdt.object-meta.xml
<CustomObject>
    <label>Animal Age Range</label>
    <pluralLabel>Animal Age Ranges</pluralLabel>
</CustomObject>