force-app/main/default/objects/Animal_Age_Range__mdt/fields/Maximum__c.field-meta.xml
<CustomField>
    <fullName>Maximum__c</fullName>
    <label>Maximum</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>