force-app/main/default/objects/Animal_Age_Range__mdt/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <label>Minimum</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>